--- a/gabyadmin/index.html
+++ b/gabyadmin/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Load Facebook SDK for JavaScript -->
-  <div id="fb-root" class="logged-in"></div>
+  <div id="fb-root"></div>
   <script>
     window.fbAsyncInit = function () {
       FB.init({
