--- a/gabyadmin/index.html
+++ b/gabyadmin/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Load Facebook SDK for JavaScript -->
-  <div id="fb-root" class="logged-in"></div>
+  <div id="fb-root"></div>
   <script>
     window.fbAsyncInit = function () {
       FB.init({
@@ -30,7 +30,7 @@
     }(document, 'script', 'facebook-jssdk'));</script>
 
   <!-- Your Chat Plugin code -->
-  <div class="fb-customerchat" attribution=setup_tool page_id="114200880309210" theme_color="#67b868">
+  <div class="fb-customerchat logged-in" attribution=setup_tool page_id="114200880309210" theme_color="#67b868">
   </div>
   <!-- NAVBAR -->
   <nav class="z-depth-0 green darken-5">
