--- a/gabyadmin/index.html
+++ b/gabyadmin/index.html
@@ -111,7 +111,7 @@
   <!-- ACCOUNT MODAL -->
   <div id="modal-account" class="modal">
     <div class="modal-content center-align">
-      <h4 class="green-text darken-5">ACCOUNT DETAILS</h4><br />
+      <h4 class="green-text darken-5">ACCOUNT DETAILS</h4>
       <div class="account-details"></div>
     </div>
   </div>
