--- a/gabyadmin/index.html
+++ b/gabyadmin/index.html
@@ -160,6 +160,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="scripts/auth.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="reset-pass.html"></script>
 </body>
 
 </html>
