--- a/gabyadmin/reset-pass.html
+++ b/gabyadmin/reset-pass.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-    <title>Gaby - Reset Password</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Compiled and minified CSS -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,14 +20,48 @@
                 <div class="form-group">
                     <label>Please input your registered email address and we will send you information to recover your
                         account.</label><br><br>
-                    <input type="text" name="email" placeholder="Please input your email here..." class="form-control" required/>
+                    <input type="text" name="email" placeholder="Please input your email here..." class="form-control"
+                        required />
                 </div>
                 <div class="form-group" align="center">
-                    <input type="submit" name="submit" class="btn btn-info" value="RESET PASSWORD"/>
+                    <input type="submit" name="submit" class="btn btn-info" value="RESET PASSWORD" />
                 </div>
             </form>
         </div>
     </div>
+    <!-- GUIDE LIST -->
+    <div class="container" style="margin-top: 40px;">
+        <ul class="collapsible z-depth-0 guides" style="border: none;">
+
+        </ul>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-functions.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyC8Jb07Hdc-1mGgSRcEblU-EVUwRMEBPOE",
+            authDomain: "hive-itmyei.firebaseapp.com",
+            databaseURL: "https://hive-itmyei.firebaseio.com",
+            projectId: "hive-itmyei"
+        };
+        firebase.initializeApp(config);
+
+        // make auth and firestore references
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+        const functions = firebase.functions();
+
+        // update firestore settings
+        db.settings({ timestampsInSnapshots: true });
+    </script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
