--- a/gabyadmin/reset-pass.html
+++ b/gabyadmin/reset-pass.html
@@ -20,11 +20,11 @@
                 <div class="form-group">
                     <label>Please input your registered email address and we will send you information to recover your
                         account.</label><br><br>
-                    <input type="text" name="email" placeholder="Please input your email here..." class="form-control"
+                    <input type="text" name="emailad" placeholder="Please input your email here..." class="form-control"
                         required />
                 </div>
                 <div class="form-group" align="center">
-                    <input type="submit" name="submit" class="btn btn-info" value="RESET PASSWORD" />
+                    <input id="reset-pass" type="submit" name="submit" class="btn btn-info" value="RESET PASSWORD" />
                 </div>
             </form>
         </div>
