--- a/gabyadmin/reset-pass.html
+++ b/gabyadmin/reset-pass.html
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label>Please input your registered email address and we will send you information to recover your
                         account.</label><br><br>
-                    <input type="text" name="emailad" placeholder="Please input your email here..." class="form-control"
+                    <input id="emailad" type="email" name="email" placeholder="Please input your email here..." class="form-control"
                         required />
                 </div>
                 <div class="form-group" align="center">
