--- a/gabyadmin/index.html
+++ b/gabyadmin/index.html
@@ -7,6 +7,7 @@
   <!-- Compiled and minified CSS -->
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="style.css">
+	<link rel="icon" href="img/favicon.png">
   <title>Gaby - Chatbot</title>
 </head>
 
