--- a/gabyadmin/reset-pass.html
+++ b/gabyadmin/reset-pass.html
@@ -13,17 +13,17 @@
 <body>
     <br />
     <div class="container">
-        <h2 text-align="center">FORGET PASSWORD?</h2>
+        <h2 class="center-align">FORGET PASSWORD?</h2>
         <br />
         <div class="col-md-6" style="margin:0 auto; float:none;">
             <form method="post">
                 <div class="form-group">
-                    <h3>Please input your registered email address and we will send you information to recover your
-                        account.</h3><br><br>
+                    <h5>Please input your registered email address and we will send you information to recover your
+                        account.</h5><br><br>
                     <input id="emailad" type="email" name="email" placeholder="Please input your email here..." class="form-control"
                         required />
                 </div>
-                <div class="form-group" text-align="center">
+                <div class="form-group" class="center-align">
                     <input id="reset-pass" type="submit" name="submit" class="btn btn-info" value="RESET PASSWORD" />
                 </div>
             </form>
